Fix layout issues on mobile

--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,4 +1,5 @@
 select {
   font-size: 2rem;
   margin: 3rem 0;
+  width: 100%;
 }
